# cattools

./: .gitignore  Cargo.toml  README.md  cattools-ipkg.sh  cattools.sh  clay-config.json
src/: cli.rs  config.rs  constants.rs  error.rs  main.rs  menu.rs
src/api/: mod.rs  repo.rs  update.rs
src/modules/: advanced.rs  diagnostic.rs  mod.rs  network.rs  package.rs  update.rs
src/uci/: dhcp.rs  firewall.rs  mod.rs  network.rs  system.rs
src/utils/: mod.rs  network.rs  system.rs  validation.rs
