[package]
name = "catools"
version = "1.0.1"
edition = "2024"
authors = ["miaoermua", "canmi"]
license = "GPL-2.0"
description = "CatWrt configuration toolbox written in Rust"
homepage = "https://github.com/miaoermua/cattools"
repository = "https://github.com/miaoermua/cattools"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dialoguer = "0.11"
toml = "0.8"
regex = "1"
env_logger = "0.11"
log = "0.4"
zip = "0.6"
dirs = "5"
chrono = "0.4"

[profile.release]
strip = true
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1